WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286714
[libpas] Return more accurate error code in PGM report extraction code
https://bugs.webkit.org/show_bug.cgi?id=286714
Summary
[libpas] Return more accurate error code in PGM report extraction code
zak ridouh
Reported
2025-01-29 15:47:08 PST
We should return a more accurate error signal in the `pas_report_crash_extract_pgm_failure()` function in `pas_report_crash.c` to signal differently when we fail to extract a report, versus when a report does not exist. This likely means returning `KERN_NOT_FOUND` instead of `KERN_FAILURE`, to allow callers of this function to distinguish between failure and just no PGM report existing.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-29 15:48:16 PST
<
rdar://problem/143851666
>
zak ridouh
Comment 2
2025-01-29 15:52:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39727
EWS
Comment 3
2025-01-29 23:52:45 PST
Committed
289550@main
(1bbbb0369005): <
https://commits.webkit.org/289550@main
> Reviewed commits have been landed. Closing PR #39727 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug