[libpas] Return more accurate error code in PGM report extraction code https://bugs.webkit.org/show_bug.cgi?id=286714 rdar://143851666

Reviewed by David Kilzer.

We should return a more accurate error signal in the `pas_report_crash_extract_pgm_failure()`
function in `pas_report_crash.c` to signal differently when we fail to extract a report, versus when a
report does not exist.

This means returning  `KERN_NOT_FOUND` instead of `KERN_FAILURE`,
 to allow callers of this function to distinguish between failure and just no PGM report existing.

* Source/bmalloc/libpas/src/libpas/pas_report_crash.c:
(pas_report_crash_extract_pgm_failure): Change return at end of function
from `KERN_FAILURE` to `KERN_NOT_FOUND`.

Canonical link: https://commits.webkit.org/289550@main